# stock_prices

./: .gitignore  Cargo.toml  readme.md
data/: sector.csv  source.csv  stock.csv
src/: main.rs
src/data/: index.csv  source.csv  stock.csv
