[package]
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
name = "stock_prices"
version = "0.2.0"
edition = "2018"

[dependencies]
csv = "1.1.1"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde"] }
futures = "0.3.1"
async-std = "0.99.9"
