[package]
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
name = "stock_prices"
version = "0.3.0"
edition = "2018"

[dependencies]
csv = "1.1.1"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde"] }

surf = "1.0"
async-std = "1.3"
